logs/Slang/generated/hdlconv/hdlconvertor_p142.sv.log
name: hdlconvertor_p142
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p142.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p142.sv:1:1: error: language feature not yet supported
class Demo ;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p142.sv:3:13: error: expected identifier
    function new (integer x);
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p142.sv:3:14: error: expected statement
    function new (integer x);
             ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p142.sv:3:28: error: expected declarator
    function new (integer x);
                           ^
